Update splash animation

--- a/TutorDot_iOS_1/TutorDot_iOS/Resource/Storyboards/Splash.storyboard
+++ b/TutorDot_iOS_1/TutorDot_iOS/Resource/Storyboards/Splash.storyboard
@@ -15,9 +15,28 @@
                     <view key="view" contentMode="scaleToFill" id="Gy3-S5-8Pa">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="튜터링 관리의 마침표, 튜터닷" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JkF-MK-OYf">
+                                <rect key="frame" x="96" y="463" width="183" height="20"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="183" id="cbs-i3-KJl"/>
+                                    <constraint firstAttribute="height" constant="20" id="h16-JN-Hj9"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="16"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
                         <color key="backgroundColor" name="Color"/>
+                        <constraints>
+                            <constraint firstItem="JkF-MK-OYf" firstAttribute="centerX" secondItem="g0K-dW-Efc" secondAttribute="centerX" id="2t3-Du-BPo"/>
+                            <constraint firstItem="JkF-MK-OYf" firstAttribute="top" secondItem="g0K-dW-Efc" secondAttribute="top" constant="419" id="gJJ-ZD-xTC"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="g0K-dW-Efc"/>
                     </view>
+                    <connections>
+                        <outlet property="subtitle" destination="JkF-MK-OYf" id="FvF-GH-f1L"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="r7j-fh-bsG" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
